Fix #7372 - Make focus visible again (#7392)
* First, remove outline: none

* Apply outline: none on select, input and active button

* Fix #7372 - Make focus visible

* Include iframe

* Remove the one in squire: plaintext

* Review with @dhoko

* Review selector

--- a/src/sass/commons/pm-modal.scss
+++ b/src/sass/commons/pm-modal.scss
@@ -88,7 +88,6 @@ $modalMargin: 2rem;
             background: $primary;
             cursor: pointer;
             display: block;
-            outline: none;
             border: none;
             z-index: 9999;
         }
