--- a/src/sass/components/composer/composer.scss
+++ b/src/sass/components/composer/composer.scss
@@ -399,7 +399,6 @@
         }
 
         input,select {
-          outline: none;
           -webkit-appearance: none; /* DRY */
           -moz-appearance: none;
           appearance: none;
