--- a/src/sass/pages/settings.scss
+++ b/src/sass/pages/settings.scss
@@ -428,7 +428,6 @@ body.appConfigBody-is-mobile {
                     &:focus {
                         background-color: lighten($border, 2%);
                         box-shadow: inset 0 1px 2px 0 rgba(0,0,0,0.05);
-                        outline: none;
                     }
 
                 }
@@ -445,7 +444,6 @@ body.appConfigBody-is-mobile {
                         &:focus {
                             background-color: #66669a;
                             border-color: #66669a;
-                            outline: none;
                         }
                     }
                 }
