--- a/src/sass/pages/signup.scss
+++ b/src/sass/pages/signup.scss
@@ -105,7 +105,6 @@
 
 /* IFRAME */
 [class*='signUpProcess-step-'] iframe#pm_captcha {
-    outline: none;
     border: none;
     width: 100%;
     position: relative;
